Changes necessary to compile M2 with JDK20.
Signed-off-by: Santiago Pericasgeertsen <santiago.pericasgeertsen@oracle.com>